--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M2 W2D4</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h2>Parte 1</h2>
+      <div class="selector">
+        <button onclick="eCommerce(marco)">Marco</button>
+        <button onclick="eCommerce(paul)">Paul</button>
+        <button onclick="eCommerce(amy)">Amy</button>
+      </div>
+      <div class="output">
+        <p id="shoppingCart"></p>
+        <p class="ambassador" id="sconto"></p>
+        <p id="subtotale"></p>
+        <p id="spedizione"></p>
+        <p class="total" id="totale"></p>
+      </div>
+      <h2>Parte 2</h2>
+      <div id="console"></div>
+    </div>
     <script src="S2P2-scaricabile.js"></script>
   </body>
 </html>
